<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>spooky-vm</artifactId>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>se.jsannemo.spooky.Main</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>javacc-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>javacc</goal>
                        </goals>
                        <id>javacc</id>
                    </execution>
                </executions>
                <groupId>org.codehaus.mojo</groupId>
                <version>2.6</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <artifactId>error_prone_core</artifactId>
                            <groupId>com.google.errorprone</groupId>
                            <version>2.3.3</version>
                        </path>
                        <path>
                            <artifactId>auto-value</artifactId>
                            <groupId>com.google.auto.value</groupId>
                            <version>1.6.6</version>
                        </path>
                    </annotationProcessorPaths>
                    <annotationProcessors>
                        <annotationProcessor>com.google.auto.value.processor.AutoValueProcessor
                        </annotationProcessor>
                        <annotationProcessor>com.google.auto.value.processor.AutoOneOfProcessor
                        </annotationProcessor>
                    </annotationProcessors>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>-XDcompilePolicy=simple</arg>
                        <arg>-Xplugin:ErrorProne</arg>
                    </compilerArgs>
                    <release>14</release>
                    <source>14</source>
                    <target>14</target>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <dependencies>
                    <dependency>
                        <artifactId>spotbugs</artifactId>
                        <groupId>com.github.spotbugs</groupId>
                        <version>4.0.0-beta4</version>
                    </dependency>
                </dependencies>
                <groupId>com.github.spotbugs</groupId>
                <version>3.1.12.2</version>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
                <version>2.22.2</version>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/test/resources</directory>
            </resource>
        </resources>
    </build>
    <dependencies>
        <dependency>
            <artifactId>truth</artifactId>
            <groupId>com.google.truth</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>junit-jupiter</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <scope>test</scope>
            <version>5.5.2</version>
        </dependency>
        <dependency>
            <artifactId>auto-value-annotations</artifactId>
            <groupId>com.google.auto.value</groupId>
            <scope>compile</scope>
            <version>1.6.6</version>
        </dependency>
        <dependency>
            <artifactId>guava</artifactId>
            <groupId>com.google.guava</groupId>
            <scope>compile</scope>
            <version>28.1-jre</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j</artifactId>
            <version>0.10.0</version>
        </dependency>
    </dependencies>
    <groupId>se.jsannemo</groupId>
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <version>2.0.0</version>
</project>
